--- a/app/views/loja/_listagem_compras.html.erb
+++ b/app/views/loja/_listagem_compras.html.erb
@@ -9,18 +9,15 @@
 			<th class="valor-total-item">Total</th>
 			<th/>
 		</tr>
-		<% for item in @listacompras.items %>
+		<% for item in @pedido.items %>
 		<tr>
 			<td class="descricao"><%= item.descricao %></td>
 			<td class="valor"><%= number_to_currency(item.produto.valor_venda, :unit => "", :delimiter => ".", :separator => ",") %></td>
 			<td class="quantidade"><%= item.quantidade %></td>
-			<td class="valor-total-item"><%= number_to_currency(item.valor_total, :unit => "", :delimiter => ".", :separator => ",")%> </td>
+			<td class="valor-total-item"><%= number_to_currency(item.valor_total.to_s, :unit => "", :delimiter => ".", :separator => ",")%> </td>
 			<td class="acoes"><%#= link_to_remote "remover", :url => {:action => "remover_dependente", :id => @cliente.id, :dependente => cliente_dependentes.id} %></td>
 		</tr>
 		<% end %>
 	  </table>
-	</div>
-	<div id="listagem-compras-divtotal">
-		<%= number_to_currency(@listacompras.valor_total, :unit => "R$", :delimiter => ".", :separator => ",") %></td>
 	</div>
 </fieldset>
