Adicionado Flag para Incidir ou nao taxa de servico num produto.

--- a/app/views/produtos/new.html.erb
+++ b/app/views/produtos/new.html.erb
@@ -27,6 +27,11 @@
     </div>
 
     <div>
+      <%= form.label :adiciona_taxa_servico, "Incide Taxa de Serviço:" %>
+      <%= form.check_box :adiciona_taxa_servico %>
+    </div>
+
+    <div>
       <%= form.label :codigo_barras, "Código de Barras:" %>
       <%= form.text_field :codigo_barras, :size => 20 %>
     </div>
