--- a/app/views/loja/index.html.erb
+++ b/app/views/loja/index.html.erb
@@ -10,10 +10,6 @@
 			<label for="compras_novo_item">Produto:</label>
 			<%= text_field 'compras', 'novo_item' %>
 		</div>
-		<div id="selecao-produto-busca-item-codigo-barras">
-			<label for="compras_codigo_barras_item">Cod Barras:</label>
-			<%= text_field 'compras', 'codigo_barras_item' %>
-		</div>
 	</p>
 	<div class="auto_complete" id="compras_novo_item_auto_complete"></div>
 	<%= auto_complete_field :compras_novo_item, :url=>{:action=>'autocomplete_novo_item'}, :frequency => 0.4, :after_update_element => "function(element,value){"+remote_function(:url => { :action => :adiciona_produto_lista_compras }, :with=>"'descricao_item='+element.value+'&quantidade_item='+jQuery('#compras_quantidade_item').val()")+";jQuery(\"#compras_quantidade_item\").val(\"1\"); jQuery(\"#compras_novo_item\").val(\"\"); jQuery(\"#compras_novo_item\").focus().select();}" %>
@@ -23,7 +19,7 @@
 <div id="listagem-compras">
 <%= render :partial => 'listagem_compras' %>
 </div>
-<div id="adiciona-pagamento">
+<div id="adiciona_pagamento">
 <%= render :partial => 'adiciona_pagamento'%>
 </div>
 <div id="resumo-pagamento">
