--- a/app/views/loja/_adiciona_pagamento.html.erb
+++ b/app/views/loja/_adiciona_pagamento.html.erb
@@ -4,8 +4,8 @@
 		<select id="pagamento_tipo" name="tipo_pagamento">
 			<option value="Dinheiro">Dinheiro</option>
 			<option value="Cartao">Cartão</option>
-			<option value="Conta">Conta</option>
-			<option value="PrePago">Pré-Pago</option>									
+			<!--<option value="Conta">Conta</option>
+			<option value="PrePago">Pré-Pago</option> -->
 		</select>
 		<label for="pagamento_valor">R$:</label>
 		<input type="text" id="pagamento_valor" name="valor" size="8"/><br/>
