--- a/app/views/layouts/loja.html.erb
+++ b/app/views/layouts/loja.html.erb
@@ -11,6 +11,7 @@
   <%= javascript_include_tag "jquery.hotkeys.js" %>
   <%= javascript_include_tag "jquery-ui-1.7.1.custom.min.js" %>
   <%= javascript_include_tag "jquery_price_format_1_3.js" %>
+  <%= javascript_include_tag "jquery.livequery.js" %>
   <script>jQuery.noConflict();</script>
   <%= javascript_include_tag "loja.js" %>
   <%= javascript_include_tag :defaults %>
