--- a/app/views/loja/_resumo_pagamento.html.erb
+++ b/app/views/loja/_resumo_pagamento.html.erb
@@ -1,24 +1,55 @@
 	<fieldset class="fieldset-camposlaterais">
 		<legend>Resumo Pagamento</legend>
+		<table id="resumo-pagamento-tabela">
+			<tr>
+				<th class="descricao">Descrição</th>
+				<th/>
+				<th class="valor">Valor</th>
+				<th/>
+			</tr>
+		</table>
 		<div id="resumo-pagamento-divtabela">
 	  		<table id="resumo-pagamento-tabela">
-				<tr>
-					<th class="descricao">Descrição</th>
-					<th class="valor">Valor</th>
-					<th/>
-				</tr>
 				<% for pagamento in @pedido.pagamentos %>
 				<tr>
 					<td class="descricao"><%= pagamento.descricao %></td>
+					<td>R$</td>
 					<td class="valor"><%= number_to_currency(pagamento.valor, :unit => "", :delimiter => ".", :separator => ",") %></td>
 					<td class="acoes"><%#= link_to_remote "remover", :url => {:action => "remover_dependente", :id => @cliente.id, :dependente => cliente_dependentes.id} %></td>
 				</tr>
 				<% end %>
 	  		</table>
 		</div>
-		<div id="listagem-compras-divtotal">
-			Total Pedido: <%= number_to_currency(@pedido.valor_total, :unit => "R$", :delimiter => ".", :separator => ",") %>
-			<br/>
-			Total Restante: <span id="resumo_pagamento_restante"><%= number_to_currency(@pedido.valor_restante, :unit => "R$", :delimiter => ".", :separator => ",") %></span>
+		<div id="resumo-pagamento-divtotal">
+			<table id="resumo-pagamento-tabela-total">
+				<tr>
+					<td>Total:</td>
+					<td>R$</td>
+					<td><%= number_to_currency(@pedido.valor_total, :unit => "", :delimiter => ".", :separator => ",") %></td>
+				</tr>
+				<tr>
+					<td>Pago:</td>
+					<td>R$</td>
+					<td><%= number_to_currency(@pedido.valor_pago, :unit => "", :delimiter => ".", :separator => ",") %></td>
+				</tr>
+				<tr>
+					<td>Pendente:</td>
+					<td>R$</td>
+					<td><%= number_to_currency(@pedido.valor_restante, :unit => "", :delimiter => ".", :separator => ",") %></td>
+				</tr>
+			</table>
 		</div>
+		<div id="resumo-pagamento-botoes-controle">
+			<% if @pedido.valor_restante > 0 %>
+				<button id="adicionar_pagamento" type"button" enabled="true">Adicionar Pagamento</button>
+			<% elsif @pedido.valor_restante <= 0 %>
+				<button id="adicionar_pagamento" type"button" enabled="false">Adicionar Pagamento</button>
+			<% end %>
+			<% if @pedido.valor_restante <= 0 %>
+				<button id="encerrar_compra" type="button" enabled="true">Finalizar</button>
+			<% elsif @pedido.valor_restante >0 %>
+				<button id="encerrar_compra" type="button" enabled="false">Finalizar</button>
+			<% end %>
+			<button id="descartar_compra" type="button">Descartar</button>
+		</div>		
 	</fieldset>
