--- a/app/views/loja/_listagem_compras.html.erb
+++ b/app/views/loja/_listagem_compras.html.erb
@@ -14,7 +14,7 @@
 		<% for item in @pedido.items %>
 		<tr>
 			<td class="descricao"><%= item.descricao %></td>
-			<td class="valor"><%= number_to_currency(item.produto.valor_venda, :unit => "", :delimiter => ".", :separator => ",") %></td>
+			<td class="valor"><%= number_to_currency(item.valor_unitario, :unit => "", :delimiter => ".", :separator => ",") %></td>
 			<td class="quantidade"><%= item.quantidade %></td>
 			<td class="valor-total-item"><%= number_to_currency(item.valor_total.to_s, :unit => "", :delimiter => ".", :separator => ",")%> </td>
 			<td class="acoes">
